# edge-infer

./: .gitignore  BACKLOG.md  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_main.cpp  bench_util.hpp
docs/: bench-history.csv  index.html
include/edge_infer/: edge_infer.hpp  gemm.hpp  graph.hpp  metrics.hpp  models.hpp  ops.hpp  quant.hpp  tensor.hpp
src/: gemm.cpp  graph.cpp  models.cpp  ops.cpp  quant.cpp  version.cpp
tests/: CMakeLists.txt  test_gemm.cpp  test_graph.cpp  test_ops.cpp  test_quant.cpp  test_tensor.cpp
